--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# images
-public/images/
+# JPEG
+*.jpg
+*.jpeg
 
 # dependencies
 node_modules
